<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/CourseNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="#006B9BEB"
        android:text="@string/courseName"
        android:textColor="#6B9BEB"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/MeetingDaysTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CourseNameTextView"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="3dp"
        android:background="#006B9BEB"
        android:text="@string/meeting_days"
        android:textColor="#6B9BEB"
        android:textSize="15sp"
        android:textStyle="normal|italic" />

    <TextView
        android:id="@+id/InstructorNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MeetingDaysTextView"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:background="#006B9BEB"
        android:text="@string/instructor_name"
        android:textColor="#6B9BEB"
        android:textSize="15sp"
        android:textStyle="normal|italic" />


    <TextView
        android:id="@+id/ColorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/InstructorNameTextView"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:background="#006B9BEB"
        android:paddingBottom="10dp"
        android:text="@string/colorinput"
        android:textColor="#6B9BEB"
        android:textSize="15sp"
        android:textStyle="normal|italic" />

</RelativeLayout>